--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,32 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 2rem 2rem;
+  background: #252c8a;
+}
+
+.banner{
+  padding: 0px;
+}
+
+.nonActiveNav{
+  color: purple;
+  font-size: 10px;
+}
+
+.headerImage{
+  padding: 10px;
+  padding-top: 20px;
+  transition: transform .2s; /* Animation */
+  margin: 0 auto;
+  text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+  font-family:monospace;
+  color: #eaeaea;
+
+}
+
+.headerImage:hover{
+  transform: scale(1.1);
 }
 
 .main {
@@ -31,6 +58,7 @@
 .title a {
   color: #0070f3;
   text-decoration: none;
+  
 }
 
 .title a:hover,
@@ -39,13 +67,30 @@
   text-decoration: underline;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.title1 {
+  margin-top: 3%;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 6vw;
+  text-align: center;
+  font-family: monospace;
+  font-weight: bold;
+  object-fit: scale-down;
+  color: #eaeaea;
 }
 
-.title,
+.title {
+  margin-top: 3%;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 6vw;
+  text-align: center;
+  font-family: monospace;
+  font-weight: bold;
+  object-fit: scale-down;
+   
+}
+
 .description {
   text-align: center;
 }
@@ -114,3 +159,5 @@
     flex-direction: column;
   }
 }
+
+
