working on layout

--- a/styles/sticker_design.module.css
+++ b/styles/sticker_design.module.css
@@ -3,7 +3,36 @@
     width: 100%;
     margin-right: auto;
     margin-left: auto;
+    
 }
 .main {
     background-color: red;
+}
+
+.stickerDescription {
+    background-color: gray;
+    
+    height: 100%;
+  
+     
+}
+
+.title {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+
+    margin: auto;
+    width: 50%;
+    font-size: 40px;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.description{
+    font-size: 22px;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+ 
 }
