--- a/styles/sticker_design.module.css
+++ b/styles/sticker_design.module.css
@@ -33,6 +33,7 @@
 
 .buyButton a {
     padding: 10px 60px;
+
  }
 
 .buyButton{
@@ -40,6 +41,7 @@
     justify-content: center;
     padding: 10px 20px;
     align-items: flex-end;
+    color: white;
 }
 
 .containerCenter {
