--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0px 20px;
+  padding: 0px 1rem;
   background: #252c8a;
   border-radius: 15px;
 }
@@ -7,6 +7,19 @@
 .banner{
   padding: 0px;
 }
+
+@media (max-width: 800px) {
+
+  .post{
+    padding: 0rem 0rem;
+  }
+
+}
+
+.post {
+  padding: 0rem 4rem;
+}
+
 
 .nonActiveNav{
   color: purple;
